--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "publish": true
   },
   "dependencies": {
+    "framer-motion": "^12.23.22",
     "hono": "4.8.2",
     "isbot": "5.1.26",
     "react": "19.0.0",
