--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -23,6 +23,33 @@
    * databases, object storage, AI inference, real-time communication and more.
    * https://developers.cloudflare.com/workers/runtime-apis/bindings/
    */
+  "kv_namespaces": [
+    {
+      "binding": "APPLICATIONS_KV",
+      "id": "42ca007068824ec58501a3c1be30b0e9"
+    }
+  ],
+  "queues": {
+    "producers": [
+      {
+        "binding": "CONTACT_QUEUE",
+        "queue": "suwityaratme"
+      }
+    ],
+    "consumers": [
+      {
+        "queue": "suwityaratme",
+        "max_batch_size": 10,
+        "max_batch_timeout": 30
+      }
+    ]
+  },
+  "send_email": [
+    {
+      "name": "SEND_EMAIL",
+      "destination_address": "jobs@suwityarat.com"
+    }
+  ],
   /**
    * Environment Variables
    * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
@@ -31,12 +58,15 @@
   /**
    * Note: Use secrets to store sensitive data.
    * https://developers.cloudflare.com/workers/configuration/secrets/
+   * 
+   * Admin PIN is stored as a secret (not in vars) for security.
+   * Set via Cloudflare dashboard or: wrangler secret put ADMIN_PIN
    */
   /**
    * Static Assets
    * https://developers.cloudflare.com/workers/static-assets/binding/
    */
-  // "assets": { "directory": "./public/", "binding": "ASSETS" },
+  "assets": { "directory": "./public/", "binding": "ASSETS" },
   /**
    * Service Bindings (communicate between multiple Workers)
    * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
