Fixed contact form

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -40,7 +40,8 @@
       {
         "queue": "suwityaratme",
         "max_batch_size": 10,
-        "max_batch_timeout": 30
+        "max_batch_timeout": 30,
+        "max_retries": 3
       }
     ]
   },
